ch5/external-service-externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: someapi.vendorco.com
  ports:
  - port: 80
