ch5/kubia-multiport-svc.yaml
# has session affinity in spec 
# this binds to port 80 on host os, and 8080 on pod, 
# so only single such service
# can be running at the same time
# the selector will apply to both ports.
# if you want different selectors to apply to 
# different port, you need to create 2 different
# service, one with each of the selector
apiVersion: v1
kind: Service
metadata:
  name: kubia-multi
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
  selector:
    app: kubia
