ch5/kubia-sa-svc.yaml
# has session affinity in spec 
# this binds to port 80 on host os, and 8080 on node, so only single such service
# can be running at the same time
apiVersion: v1
kind: Service
metadata:
  name: kubia-sa
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
